--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -1,15 +1,35 @@
 {"version": "1.1.0",
  "packagesDir": ".lake/packages",
  "packages":
- [{"url": "https://github.com/amarmaduke/lean-subst",
+ [{"url": "https://github.com/amarmaduke/lilac",
    "type": "git",
    "subDir": null,
    "scope": "amarmaduke",
-   "rev": "311c1c43656eefe762300e0d3434eef9a0637de0",
+   "rev": "396d7566b10fd112c3cc83395b9195c8b47461cf",
+   "name": "lailac",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": false,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/amarmaduke/lean-subst",
+   "type": "git",
+   "subDir": null,
+   "scope": "amarmaduke",
+   "rev": "49a61b249983653b4f85addd3f5c5b337673614d",
    "name": "«lean-subst»",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
    "inherited": false,
+   "configFile": "lakefile.toml"},
+  {"url": "https://github.com/amarmaduke/lilac",
+   "type": "git",
+   "subDir": null,
+   "scope": "amarmaduke",
+   "rev": "396d7566b10fd112c3cc83395b9195c8b47461cf",
+   "name": "lilac",
+   "manifestFile": "lake-manifest.json",
+   "inputRev": "main",
+   "inherited": true,
    "configFile": "lakefile.toml"}],
  "name": "systemfd",
  "lakeDir": ".lake"}
