fix lean-subst and lilac versions

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -8,7 +8,7 @@
    "rev": "396d7566b10fd112c3cc83395b9195c8b47461cf",
    "name": "lailac",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "396d756",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/amarmaduke/lean-subst",
@@ -18,7 +18,7 @@
    "rev": "49a61b249983653b4f85addd3f5c5b337673614d",
    "name": "«lean-subst»",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "49a61b2",
    "inherited": false,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/amarmaduke/lilac",
